--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+	<repositories>
+		<repository>
+			<id>maven-group</id>
+			<url>http://localhost:8081/repository/maven-group/</url>
+		</repository>
+	</repositories>
   <build>
   <pluginManagement>
     <plugins>
