--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,16 @@
 			<url>http://localhost:8081/repository/maven-group/</url>
 		</repository>
 	</repositories>
+<distributionManagement>
+	<snapshotRepository>
+		<id>nexus-snapshots</id>
+		<url>http://localhost:8081/repository/maven-snapshots/</url>
+	</snapshotRepository>
+	<repository>
+		<id>nexus-releases</id>
+		<url>http://localhost:8081/repository/maven-releases/</url>
+	</repository>
+</distributionManagement>
   <build>
   <pluginManagement>
     <plugins>
